--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Kat's Costume Shop</title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
-
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <link href='./assets/css/index.css' media='all' rel='stylesheet'>
   </head>
 
@@ -12,8 +12,10 @@
       <p class="float-left">ABOUT</p>
       <p>CONTACT</p>
     </nav>
-
-      <img class="splash" src="./assets/images/kats-hero.jpg" />
+<div class="splash">
+      <img class="img1" src="./assets/images/kats-hero-mobile.jpg" />
+      <img class="img2" src="./assets/images/kats-hero-mobile.png" />
+    </div>
 <div class="main">
   <div class="intro">
       <h1>Get some serious cat-titude</h1>
@@ -24,6 +26,7 @@
       capes, socks and booties. Custom orders are available upon
       request. Just stop by the store or call and ask for Mavis.</h3>
 </div>
+<div class="bios">
 <div class="kat">
       <h2>About Kat</h2>
       <p>Kat is the ultimate cat lady you've always dreamed you could
@@ -38,10 +41,14 @@
       custom orders. Her cats are often roaming freely throughout
       the store and modeling the latest trends.</p>
 </div>
-      <img class="cool-cats scoot" src="./assets/images/kats-cat1.jpg" />
-      <img class="cool-cats scoot" src="./assets/images/kats-cat2.jpg" />
-      <img class="cool-cats" src="./assets/images/kats-cat3.jpg" />
+</div>
+</div>
+<div class="cool-cats">
+      <img class="scoot" src="./assets/images/kats-cat1.jpg" />
+      <img class="scoot" src="./assets/images/kats-cat2.jpg" />
+      <img src="./assets/images/kats-cat3.jpg" />
     </div>
+
     <div class="main-2">
       <h1>Get In Touch</h1>
 <div class="hours">
