Added flex flow to appropriate properties, all but for the splash image, and the cat images

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <div class="main-2">
       <h1>Get In Touch</h1>
+      <div class="justify">
 <div class="hours">
       <h2>Business Hours</h2>
         <h3>Monday-Friday 11am - 8pm</h3>
@@ -63,6 +64,7 @@
           <h3>Address
             <a>1234 Imaginary Ln St. Louis, MO 63101</a></h3>
           </div>
+    </div>
 </div>
     <footer>
       <img src="./assets/images/kats-map.jpg" />
