Completed all flex-box edits for responsiveness, except kat/mavis and business hours/contact divs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <nav>
       <h1>Kat's Costume Shop</h1>
-      <p class="float-left">ABOUT</p>
+      <div class="go-right">
+      <p>ABOUT</p>
       <p>CONTACT</p>
+    </div>
     </nav>
 <div class="splash">
       <img src="./assets/images/kats-hero.jpg" />
